UPDATE: optimize Checkout process

--- a/app/views/spree/admin/shared/_account_nav.html.erb
+++ b/app/views/spree/admin/shared/_account_nav.html.erb
@@ -15,7 +15,7 @@
             <% end %>
           </li>
         <% end %>
-        <% if can?(:manage, try_spree_current_user) %>
+        <% if can?(:manage, try_spree_current_user) && try_spree_current_user.is_admin? %>
           <li>
             <%= link_to spree.edit_admin_user_path(try_spree_current_user) do %>
               <i class="glyphicon glyphicon-user"></i>
@@ -24,9 +24,9 @@
             <% end %>
           </li>
         <% end %>
-        <% if spree.respond_to? :admin_logout_path %>
+        <% if try_spree_current_user.is_member? %>
           <li>
-            <%= link_to spree.admin_logout_path do %>
+            <%= link_to spree_logout_path, method: :delete do %>
               <i class="glyphicon glyphicon-log-out"></i>
               &nbsp;
               <%= Spree.t(:logout) %>
