--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -36,7 +36,7 @@
 
 <% if Spree.user_class && can?(:admin, Spree.user_class) %>
   <ul class="nav nav-sidebar">
-    <%= tab *Spree::BackendConfiguration::USER_TABS, url: spree.admin_users_path, icon: 'user' %>
+    <%= tab *Spree::BackendConfiguration::USER_TABS, url: spree.admin_users_path, icon: '' %>
   </ul>
 <% end %>
 
