--- a/app/views/spree/address/_form.html.erb
+++ b/app/views/spree/address/_form.html.erb
@@ -35,14 +35,17 @@
     <% end %>
     <%= form.text_field :city, class: 'form-control', required: true %>
   </p>
-  <p class="form-group" id=<%="#{address_id}country" %>>
-    <%= form.label :country_id do %>
-      <%= Spree.t(:country) %><abbr class="required" title="required">*</abbr>
-    <% end %>
-    <span id=<%="#{address_id}country-selection" %>>
-      <%= form.collection_select :country_id, available_countries, :id, :name, {}, { class: 'form-control', required: true } %>
-    </span>
-  </p>
+
+  <% if true %>
+    <p class="form-group" id=<%="#{address_id}country" %>>
+      <%= form.label :country_id do %>
+        <%= Spree.t(:country) %><abbr class="required" title="required">*</abbr>
+      <% end %>
+      <span id=<%="#{address_id}country-selection" %>>
+        <%= form.collection_select :country_id, available_countries, :id, :name, {}, { class: 'form-control', required: true } %>
+      </span>
+    </p>
+  <% end %>
 
   <% if Spree::Config[:address_requires_state] %>
     <p class="form-group" id=<%="#{address_id}state" %>>
@@ -70,18 +73,22 @@
       </noscript>
   <% end %>
 
-  <p class="form-group" id=<%="#{address_id}zipcode" %>>
-    <%= form.label :zipcode do %>
-      <%= Spree.t(:zip) %><% if address.require_zipcode? %><abbr class="required" title="required">*</abbr><% end %>
-    <% end %>
-    <%= form.text_field :zipcode, class: 'form-control', required: address.require_zipcode? %>
-  </p>
+  <% if false %>
+    <p class="form-group" id=<%="#{address_id}zipcode" %>>
+      <%= form.label :zipcode do %>
+        <%= Spree.t(:zip) %><% if address.require_zipcode? %><abbr class="required" title="required">*</abbr><% end %>
+      <% end %>
+      <%= form.text_field :zipcode, class: 'form-control', required: address.require_zipcode? %>
+    </p>
+  <% end %>
+
   <p class="form-group" id=<%="#{address_id}phone" %>>
     <%= form.label :phone do %>
       <%= Spree.t(:phone) %><% if address.require_phone? %><abbr class="required" title="required">*</abbr><% end %>
     <% end %>
     <%= form.phone_field :phone, class: 'form-control', required: address.require_phone? %>
   </p>
+
   <% if Spree::Config[:alternative_shipping_phone] %>
     <p class="form-group" id=<%="#{address_id}altphone" %>>
       <%= form.label :alternative_phone, Spree.t(:alternative_phone) %>
